--- a/app/styles.css
+++ b/app/styles.css
@@ -255,11 +255,13 @@ img {
 .home__cards{
   grid-template-columns: 240px;
   justify-content: center;
+  
 }
 
 .home__card{
   position: relative;
   overflow: hidden;
+  border-radius: 4px;
 }
 
 .home__card-img{
