--- a/app/styles.css
+++ b/app/styles.css
@@ -194,8 +194,21 @@ img {
   }
 }
 
-
 /* Add blur to header */
+.blur-header::after {
+  content: '';
+  position: absolute;
+  width: 1000%;
+  height: 100%;
+  background-color: hsla(0, 0%, 0%, 0.3);
+  backdrop-filter: blur(24px);
+  -webkit-backdrop-filter: blur(24px);
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+
 
 
 /* Active link */
@@ -258,7 +271,7 @@ img {
   
 }
 
-.home__card{
+.home__card{ 
   position: relative;
   overflow: hidden;
   border-radius: 4px;
@@ -291,9 +304,29 @@ img {
   transform: scale(1.2);
 }
 
-
-
 /*=============== BUTTON ===============*/
+.button{
+  background-color: hsla(0, 0%, 100%, .2);
+  padding: 1.25rem 1.5rem;
+  color: var(--title-color);
+  display: inline-flex;
+  align-items: center;
+  column-gap: .5rem;
+  font-family: var(--second-font);
+  font-weight: var(--font-semi-bold);
+  backdrop-filter: blur(24px);
+  -webkit-backdrop-filter: blur(240px); 
+}
+
+.button i{
+  font-size: 1.25rem;
+  transition: transform 0.4s;
+  font-weight: initial;
+}
+
+.button:hover i{
+  transform: translateX(0.25rem)
+}
 
 
 /*=============== ABOUT ===============*/
