--- a/app/styles.css
+++ b/app/styles.css
@@ -208,9 +208,6 @@ img {
   z-index: -1;
 }
 
-
-
-
 /* Active link */
 
 
@@ -315,7 +312,8 @@ img {
   font-family: var(--second-font);
   font-weight: var(--font-semi-bold);
   backdrop-filter: blur(24px);
-  -webkit-backdrop-filter: blur(240px); 
+  -webkit-backdrop-filter: blur(240px);
+  border-radius: 4px; 
 }
 
 .button i{
@@ -328,8 +326,45 @@ img {
   transform: translateX(0.25rem)
 }
 
-
 /*=============== ABOUT ===============*/
+.about__container{
+  row-gap: 3rem;
+}
+
+.about__data{
+  text-align: center;
+}
+
+.about__description{
+  margin-bottom: 2rem;
+}
+
+.about__image{
+  position: relative;
+  justify-self: center;
+  overflow: hidden;
+  border-radius: 4px;
+}
+
+.about__img{
+  width: 300px;
+  transition: transform 0.4s;
+}
+
+.about__shadow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(180deg, hsla(0, 0%, 0%, 0) 50%, hsla(0, 0%, 0%, 0.7) 125%);
+}
+
+.about__image:hover .about__img{
+  transform: scale(1.2);
+}
+
+
 
 
 /*=============== POPULAR ===============*/
