--- a/app/styles.css
+++ b/app/styles.css
@@ -364,10 +364,55 @@ img {
   transform: scale(1.2);
 }
 
-
-
-
 /*=============== POPULAR ===============*/
+.popular__container{
+  padding-top: 1.5rem;
+  grid-template-columns: 240px;
+  justify-content: center;
+  row-gap: 2.5rem;
+}
+
+.popular__image{
+  position:relative;
+  overflow: hidden;
+  margin-bottom: 1rem;
+  border-radius: 4px;
+}
+
+.popular__img{
+  transition: transform 0.4s;
+}
+
+.popular__shadow{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(180deg, hsla(0, 0%, 0%, 0) 50%, hsla(0, 0%, 0%, 0.7) 125%);
+}
+
+.popular__title{
+  font-size: var(--h3-font-size);
+  margin-bottom: 0.5rem;
+}
+
+.popular__location{
+  display: inline-flex;
+  align-items: center;
+  font-family: var(--small-font-size);
+  font-family: var(--second-font);
+  font-weight: 500;
+}
+
+.popular__location i{
+  font-size: 1rem;
+}
+
+.popular__image:hover .popular__img{
+  transform: scale(1.2);
+}
+
 
 
 /*=============== EXPLORE ===============*/
