--- a/app/styles.css
+++ b/app/styles.css
@@ -414,7 +414,44 @@ img {
 }
 
 /*=============== EXPLORE ===============*/
+.explore{
+  position: relative;
+}
 
+.explore__image{
+  position: absolute;
+  overflow: hidden;
+}
+
+.explore__image{
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  object-position: center;
+}
+
+
+/*=============== crear efecto de scroll hacia para recorrer la imagen ===============*/
+
+.explore__shadow{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(180deg,
+                  hsl(0, 0%, 0%) 5%,
+                  hsla(0, 0%, 0%, 0) 40%,
+                  hsla(0, 0%, 0%, 0) 60%,
+                  hsl(0, 0%, 0%) 92%);
+}
+
+.explore__content{
+  position: relative;
+  padding-top: 16rem;
+  text-align: center;
+  row-gap: 2.5rem;
+}
 
 /*=============== JOIN ===============*/
 
