--- a/app/styles.css
+++ b/app/styles.css
@@ -134,6 +134,7 @@ img {
   z-index: var(--z-fixed);
 }
 
+
 .nav {
   height: var(--header-height);
   display: flex;
@@ -145,6 +146,35 @@ img {
   color: var(--title-color);
   font-family: var(--second-font);
   font-weight: var(--font-semi-bold);
+}
+
+.nav__list {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  row-gap: 2.5rem;
+}
+
+.nav__link {
+  position: relative;
+  color: var(--title-color);
+  font-family: var(--second-font);
+  font-weight: var(--font-medium);
+}
+
+.nav__link::after{
+  content: '';
+  width: 0;
+  height: 2px;
+  background-color: var(--title-color);
+  position: absolute;
+  left: 0;
+  bottom: -.5rem;
+  transition: width .3s;
+}
+
+.nav__link:hover::after{
+  width: 70%;
 }
 
 .nav__toggle,
@@ -397,6 +427,11 @@ img {
   border-radius: 4px;
 }
 
+.popular__image img {
+  width: 100%;
+  height: 140px; /* Ajusta según sea necesario */
+  object-fit: cover;
+}
 .popular__img{
   transition: transform 0.4s;
 }
@@ -590,6 +625,7 @@ img {
 }
 
 .footer__data{
+  display: grid;
   grid-template-columns: repeat(2, max-content);
   gap: 2.5rem 3.5rem;
 }
@@ -697,7 +733,7 @@ img {
   }
   
   .footer__data {
-    grid-template-columns: auto;
+    grid-template-columns: max-content;
   
   }
   
@@ -721,22 +757,75 @@ img {
 @media screen and (min-width: 768px) {
   .home__cards{
     grid-template-columns: repeat(2, 240px);
+  }
+  
+  .about__container,
+  .join__container{
+    grid-template-columns: repeat(2, 350px);
+    align-items: center;
+  }
 
+  .about__data,
+  .about__data .section__title,
+  .join__data,
+  .join__data .section__title{
+    text-align: initial;
+  }
+
+  .popular__container{
+    grid-template-columns: repeat(2, 240px);
+  }
+
+.explore__img{
+  width: 100vw;
+
+}
+
+.join__image{
+  order: -1;
+}
+
+.footer__content{
+  grid-template-columns: repeat(2, max-content);
+  justify-content: space-between;
+}
+
+.footer__group{
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.footer__copy{
+  order: -1;
+
+}
+
+}
+
+/* For larger devices */
+@media screen and (min-width: 1023px) {
+  .nav__close,
+  .nav__toggle{
+    display: none;
+  }
+  
+  .nav__list{
+    flex-direction: row;
+    column-gap: 4rem;
+  }
+
+  .popular__container{
+    grid-template-columns: repeat(4, 240px);
 
   }
 
+  .footer__data{
+    grid-template-columns: repeat(4, max-content);
+    column-gap: 4.5rem;
 
-
+  }
   
 }
 
 
 
-
-
-/* For larger devices */
-
-
-
-
-/* For large devices
