--- a/app/styles.css
+++ b/app/styles.css
@@ -503,15 +503,40 @@ img {
 }
 
 /*=============== VIDEO GALLERY ===============*/
-.video-gallery {
-  padding: 3rem 0;
-  background-color: #000;
+.accordion-item {
+  margin-bottom: 1rem;
+  border: 1px solid #444;
+  border-radius: 8px;
 }
 
-.video-gallery .container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 1rem;
+.accordion-header {
+  background-color: #111;
+  color: #fff;
+  padding: 1rem;
+  text-align: left;
+  width: 100%;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.accordion-header:hover {
+  background-color: #222;
+}
+
+.accordion-content {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease-out;
+}
+
+.accordion-content .video-card {
+  padding: 1rem;
+}
+
+.accordion-item.active .accordion-content {
+  max-height: 500px; /* Ajusta según el contenido */
 }
 
 .video-card {
@@ -539,11 +564,11 @@ img {
   filter: brightness(0.7);
 }
 
-/* Video playback control */
 .video-card .video:hover {
   filter: brightness(1.2);
   transform: scale(1.05);
 }
+
 
 /*=============== JOIN ===============*/
 .join__container{
